<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kevinwu.emailservice.MainActivity">

    <TextView
        android:text="@string/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/tree"
        android:scaleType="fitCenter"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/notification2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_notification2"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:text="@string/notification1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_notification1"
        android:layout_above="@+id/login_notification2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/usernameHint"
        android:selectAllOnFocus="false"
        android:maxLength="15"
        android:id="@+id/login_username"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/passwordHint"
        android:selectAllOnFocus="false"
        android:id="@+id/login_password"
        android:maxLength="15"
        android:layout_below="@+id/login_username"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/buttonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_loginButton"
        android:onClick="emailLogin"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/login_notification2"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:text="@string/login_registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_loginButton"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginEnd="27dp"
        android:id="@+id/button2"
        android:onClick="registerService" />

</RelativeLayout>
